--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ dd {
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role="list"],
-ol[role="list"] {
+ul[role=list],
+ol[role=list] {
   list-style: none;
 }
 
@@ -66,6 +66,7 @@ body {
   display: grid;
   justify-content: center;
   align-content: center;
+  background-color: hsl(0deg, 0%, 95%);
 }
 
 .main {
@@ -92,8 +93,8 @@ body {
   width: 15em;
   min-height: 5em;
   border-radius: 2.5em;
-  background-color: hsla(0deg, 0%, 100%, 0.75);
-  border: 0.2rem solid hsla(0deg, 0%, 100%, 0.75);
+  background-color: hsl(0deg, 0%, 95%);
+  border: 0.2rem solid hsl(0deg, 0%, 95%);
 }
 .section__button--span {
   font-size: 1.5rem;
@@ -108,7 +109,7 @@ body {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-family: "Big Shoulders Display", cursive;
-  color: hsla(0deg, 0%, 100%, 0.75);
+  color: hsl(0deg, 0%, 95%);
 }
 
 .sedan {
@@ -132,7 +133,7 @@ body {
   color: hsl(179deg, 100%, 13%);
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1000px) {
   body {
     justify-content: center;
   }
@@ -154,7 +155,7 @@ body {
 }
 
 .sedan__button:hover .sedan__button--span {
-  color: aliceblue;
+  color: hsl(0deg, 0%, 95%);
 }
 
 .suv__button:hover {
@@ -162,7 +163,7 @@ body {
 }
 
 .suv__button:hover .suv__button--span {
-  color: hsla(0deg, 0%, 100%, 0.75);
+  color: hsl(0deg, 0%, 95%);
 }
 
 .luxury__button:hover {
@@ -170,7 +171,7 @@ body {
 }
 
 .luxury__button:hover .luxury__button--span {
-  color: hsla(0deg, 0%, 100%, 0.75);
+  color: hsl(0deg, 0%, 95%);
 }
 
 /*# sourceMappingURL=styles.css.map */
